[package]
name = "git_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_repr = "0.1.7"
serde_yaml = "0.8.17"
regex = "1"
git2 = "0.13"
log = "0.4.14"
async-trait = "0.1.52"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json"] }
anyhow = "1.0.51"
base64 = "0.13.0"
pretty_env_logger = "0.4.0"
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }